Add list location manager endpoint
